--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^3.0.0",
     "react-scripts": "5.0.1",
     "react-uid": "^2.3.2",
-    "web-vitals": "^0.2.2"
+    "web-vitals": "^0.2.2",
+    "write-json-file": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
